This makes auto-transition behavior easier. Addressed a few more issues for low-end PC too.

19-11-2023: Fixed the async compute bug for RTX 3000 series GPU. Minor object reference fix in mesh renderer.
Finished adding mesh preview rendering.
20-11-2023: Added fbx import workflow in mesh editor. But I need to deal with the overwriting behavior.
Added roughness texture import too (ShininessExponent texture type in FBX import).
Finished fbx import editor. But auto generating mesh renderer has not done yet.

21-11-2023: Finished adding auto generation of mesh renderer after import a fbx.
Enchanced the material shader naming and compiling safety.
23-11-2023: Organized a few defines in new UHLightCommon.hlsli. It's not a good idea to put all defines in the same file after all.
Refactored request render buffer funtion, it now creates resource at the same time when requesting it.
Tweaked TAA again. Prevented duplicated destroy of descriptor pool in shader class.

24-11-2023: Refactored a few release workflow and removed a few .reset() calls. Added SH9 generation pass to rendering pipeline.
Next is to actually apply it to rendering.
26-11-2023: Applied SH9 lighting to object pass. Which works great! Reverted dtor release behavior, that's dangerous.
Moved all GPU time scope to the top of function, made it more sense.

29-11-2023: Minor fix for resource barrier, I forgot clearing the list after calling flush resource barrier!
Fixed async compute issue again by adding compute shader bit for the wait semaphore.

01-12-2023: Minor improvements that includes using _UNORM for miprate instead, moving velocity calculation to vertex shader
, and enhanced async compute again (start thinking it could be driver issue).
Removed jitter distance scale calculation in vertex shader. Improved TAA again by an adaptive method.
Drop history buffer format as R11G11B10 for performance. Fixed a minor issue when switching material blend mode.