@@ -10,13 +10,6 @@ void UHDeferredShadingRenderer::RenderMotionPass(UHRenderBuilder& RenderBuilder)
 
 	GraphicInterface->BeginCmdDebug(RenderBuilder.GetCmdList(), "Drawing Motion Pass");
 	{
-		// copy result to history velocity before rendering a new one
-		RenderBuilder.PushResourceBarrier(UHImageBarrier(GMotionVectorRT, VK_IMAGE_LAYOUT_TRANSFER_SRC_OPTIMAL));
-		RenderBuilder.PushResourceBarrier(UHImageBarrier(GPrevMotionVectorRT, VK_IMAGE_LAYOUT_TRANSFER_DST_OPTIMAL));
-		RenderBuilder.FlushResourceBarrier();
-		RenderBuilder.CopyTexture(GMotionVectorRT, GPrevMotionVectorRT);
-
-		RenderBuilder.PushResourceBarrier(UHImageBarrier(GPrevMotionVectorRT, VK_IMAGE_LAYOUT_SHADER_READ_ONLY_OPTIMAL));
 		RenderBuilder.PushResourceBarrier(UHImageBarrier(GMotionVectorRT, VK_IMAGE_LAYOUT_COLOR_ATTACHMENT_OPTIMAL));
 		RenderBuilder.PushResourceBarrier(UHImageBarrier(GSceneDepth, VK_IMAGE_LAYOUT_TRANSFER_SRC_OPTIMAL));
 		RenderBuilder.PushResourceBarrier(UHImageBarrier(GSceneTranslucentDepth, VK_IMAGE_LAYOUT_TRANSFER_DST_OPTIMAL));
